--- a/melos.yaml
+++ b/melos.yaml
@@ -15,6 +15,6 @@ scripts:
   test:
     run: melos exec -- "flutter test"
   build:
-    run: melos exec -- "flutter pub run build_runner build --delete-conflicting-outputs"
+    run: melos exec --order-dependents -- "flutter pub run build_runner build --delete-conflicting-outputs"
   clean:
     run: melos exec -- "flutter clean"
