--- a/packages/core/database/pubspec.yaml
+++ b/packages/core/database/pubspec.yaml
@@ -3,21 +3,22 @@ description: Core database package.
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+    sdk: '>=3.8.0 <4.0.0'
 
 dependencies:
   # Add dependencies here
-  core_data:
-    path: ../data
   shared_util:
     path: ../../shared/util
   drift: ^2.28.1
   sqlite3_flutter_libs: ^0.5.39
   path_provider: ^2.1.5
   path: ^1.9.1
+  riverpod: ^3.0.0-dev.17
+  riverpod_annotation: ^3.0.0-dev.17
 
 dev_dependencies:
   test: ^1.26.3
   lint: ^2.8.0
   drift_dev: ^2.28.1
+  riverpod_generator: ^3.0.0-dev.17
   build_runner: ^2.6.0
