--- a/packages/core/network/pubspec.yaml
+++ b/packages/core/network/pubspec.yaml
@@ -3,18 +3,18 @@ description: Core network package.
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.8.0 <4.0.0'
 
 dependencies:
   # Add dependencies here
-  core_data:
-    path: ../data
   shared_util:
     path: ../../shared/util
   flutter_dotenv: ^5.2.1
   dio: ^5.9.0
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
+  riverpod: ^3.0.0-dev.17
+  riverpod_annotation: ^3.0.0-dev.17
 
 dev_dependencies:
   test: ^1.26.3
@@ -22,3 +22,4 @@ dev_dependencies:
   freezed: ^3.2.0
   build_runner: ^2.6.0
   json_serializable: ^6.10.0
+  riverpod_generator: ^3.0.0-dev.17
