--- a/packages/core/widget/pubspec.yaml
+++ b/packages/core/widget/pubspec.yaml
@@ -3,8 +3,8 @@ description: Core widget package.
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: ">=3.0.0"
+  sdk: '>=3.8.0 <4.0.0'
+  flutter: '>=3.0.0'
 
 dependencies:
   flutter:
