--- a/packages/feature/search/pubspec.yaml
+++ b/packages/feature/search/pubspec.yaml
@@ -3,13 +3,14 @@ description: Search feature package.
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: ">=3.0.0"
+  sdk: '>=3.8.0 <4.0.0'
+  flutter: '>=3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.6.1
+  flutter_riverpod: ^3.0.0-dev.17
+  riverpod_annotation: ^3.0.0-dev.17
   # core packages
   core_designsystem:
     path: ../../core/designsystem
@@ -27,4 +28,5 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  riverpod_generator: ^3.0.0-dev.17
   build_runner: ^2.6.0
