--- a/packages/navigate/pubspec.yaml
+++ b/packages/navigate/pubspec.yaml
@@ -1,20 +1,28 @@
-
 name: navigate
 description: A new Flutter package.
 version: 0.0.1
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.8.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
   go_router: ^16.1.0
+  feature_root:
+    path: ../feature/root
+  feature_search:
+    path: ../feature/search
+  feature_favorites:
+    path: ../feature/favorites
+  flutter_riverpod: ^3.0.0-dev.17
+  riverpod_annotation: ^3.0.0-dev.17
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
+  riverpod_generator: ^3.0.0-dev.17
   build_runner: ^2.6.0
