--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
-  flutter_riverpod: ^2.6.1
+  flutter_riverpod: ^3.0.0-dev.17
+  riverpod_annotation: ^3.0.0-dev.17
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -20,6 +21,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   melos: ^6.3.3
+  riverpod_generator: ^3.0.0-dev.17
   build_runner: ^2.6.0
 
 flutter:
