--- a/packages/feature/search/pubspec.yaml
+++ b/packages/feature/search/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  freezed_annotation: ^3.1.0
   flutter_riverpod: ^3.0.0-dev.17
   riverpod_annotation: ^3.0.0-dev.17
   # core packages
@@ -16,6 +17,8 @@ dependencies:
     path: ../../core/designsystem
   core_domain:
     path: ../../core/domain
+  core_data:
+    path: ../../core/data
   # shared packages
   shared_ui:
     path: ../../shared/ui
@@ -23,10 +26,13 @@ dependencies:
     path: ../../shared/util
   router:
     path: ../../router
+  shared_common:
+    path: ../../shared/common
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   riverpod_generator: ^3.0.0-dev.17
+  freezed: ^3.2.0
   build_runner: ^2.6.0
