--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_riverpod: ^3.0.0-dev.17
   riverpod_annotation: ^3.0.0-dev.17
   cupertino_icons: ^1.0.8
+  home_widget: ^0.8.0
 
 dev_dependencies:
   flutter_test:
