chore: .gitignore에 pubspec.lock 추가

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ migrate_working_dir/
 build/
 .flutter-plugins
 .flutter-plugins-dependencies
+pubspec.lock
 # Commonly generated files
 *.g.dart
 *.freezed.dart
